--- a/_posts/about/about.Rmd
+++ b/_posts/about/about.Rmd
@@ -6,13 +6,16 @@ date: "`r Sys.Date()`"
 output: distill::distill_article
 ---
 
-This section must bu include a short presentation of you.
 Hi, 
-I'm Héloïse Plasman, I'm in 2^nd grade in Biology in the Univerty of Mons in Belgium. 
+
+I'm Héloïse Plasman, I'm in second grade in Biology in the Univerty of Mons in Belgium. My English teacher this year is Bénédicte Bouchet, I'm in group 4. 
+
 I aways like Sciences in general since a long time. That's why I was already studying Sciences in secondary school. 
+
 I have also had English courses since I was in kinder garden because I was in a immersion school. 
+
 
 Besides studies my big passion is pastry and cooking in general. It helps me destress.
 
-- first name/surname, teacher’s name, class name and academic year
-My names is Héloïse Plasman and my English teacher is Bénédicte Bouchet, I'm in BAB2 (group 4), 2020-2021
+Academic year  2020-2021
+
