--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Héloïse's blog"
+title: "Humans and Technology, Is It a Good or a Bad Thing ?"
 site: distill::distill_website
 listing: posts
 ---
