--- a/_posts/2020-10-24-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-24-mon-article/mon-article.Rmd
@@ -6,7 +6,7 @@ author:
   - name: Plasman Héloïse
     url: Heloise04.github.io/Heloise_blog/
 date: 10-24-2020
-bibliography: biblio/AI Alzheimer
+bibliography: biblio/AI_Alzheimer.bib
 output:
   distill::distill_article:
     self_contained: false
