ajout de disqus

--- a/_posts/2020-10-24-mon-article/biblio/AI_Alzheimer.bib
+++ b/_posts/2020-10-24-mon-article/biblio/AI_Alzheimer.bib
@@ -1,4 +1,4 @@
-@misc{
+@misc{ ,
 author = {{Jane Wakefield}},
 booktitle = {BBC News},
 title = {{The AI that spots Alzheimer's from cookie drawin}},
