--- a/docs/posts/2020-10-24-mon-article/biblio/AI_Alzheimer.bib
+++ b/docs/posts/2020-10-24-mon-article/biblio/AI_Alzheimer.bib
@@ -1,9 +1,7 @@
-@misc{UniversityofBirmingham,
-abstract = {Researchers have used an innovative approach to identify thousands of antibiotic resistance genes found in bacteria that inhabit the human gut.},
-author = {{University of Birmingham}},
-booktitle = {ScienceDaily},
-title = {{More than 6,000 antibiotic resistance genes discovered in the bacteria that inhabit the human gut.}},
-url = {www.sciencedaily.com/releases/2018/11/181130111626.htm},
-urldate = {25 octoberer 2019},
-year = {2018}
+@misc{ ,
+author = {{Jane Wakefield}},
+booktitle = {BBC News},
+title = {{The AI that spots Alzheimer's from cookie drawin}},
+url = {https://www.bbc.com/news/technology-54538228},
+urldate = {23 octoberer 2020}
 }
