--- a/_posts/2020-10-24-mon-article/biblio/AI_Alzheimer.bib
+++ b/_posts/2020-10-24-mon-article/biblio/AI_Alzheimer.bib
@@ -1,7 +1,7 @@
-@misc{ ,
-author = {{Jane Wakefield}},
-booktitle = {BBC News},
-title = {{The AI that spots Alzheimer's from cookie drawin}},
-url = {https://www.bbc.com/news/technology-54538228},
-urldate = {23 octoberer 2020}
+@MISC {,
+    author       = "Jane Wakefield",
+    title        = "The AI that spots Alzheimer's from cookie drawin",
+    howpublished = "BBC News",
+    month        = "oct",
+    year         = "2020"
 }
