--- a/_posts/2020-10-24-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-24-mon-article/mon-article.Rmd
@@ -8,7 +8,8 @@ author:
 date: 10-24-2020
 output:
   distill::distill_article:
-    self_contained: false
+    self_contained: false# References
+# References
 ---
 
 ```{r setup, include=FALSE}
@@ -70,4 +71,3 @@ The AI will not give the diagnosis but will help the doctor
 #### *Remaining questions*
 /
 
-# References
