--- a/_posts/2020-10-24-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-24-mon-article/mon-article.Rmd
@@ -6,10 +6,12 @@ author:
   - name: Plasman Héloïse
     url: Heloise04.github.io/Heloise_blog/
 date: 10-24-2020
+title: "Sample Document"
+output: html_document
+bibliography: biblio/AI_Alzheimer.bib
 output:
   distill::distill_article:
-    self_contained: false# References
-# References
+    self_contained: false
 ---
 
 ```{r setup, include=FALSE}
