--- a/_posts/2020-10-24-mon-article 1/mon-article-1.Rmd
+++ b/_posts/2020-10-24-mon-article 1/mon-article-1.Rmd
@@ -4,7 +4,7 @@ description: |
   Analyse of how the AI can help diagnose Alzheimer.
 author:
   - name: Plasman Héloïse
-    url: Heloise04.github.io/Heloise_blog/
+    url: {http://Heloise04.github.io/Heloise_blog/}
 date: 10-24-2020
 bibliography: AI_Alzheimer.bib
 output: 
