--- a/_posts/2020-11-03-mon-article-3/mon-article-3.Rmd
+++ b/_posts/2020-11-03-mon-article-3/mon-article-3.Rmd
@@ -4,7 +4,7 @@ description: |
   A short description of the post.
 author:
   - name: Plasman Héloïse
-    url: {}
+    url: {http://Heloise04.github.io/Heloise_blog/}
 date: 11-03-2020
 output:
   distill::distill_article:
@@ -16,7 +16,9 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 _Source of the article_ : BBC News
+
 _Word count_ : 852
+
 _URL_ : https://www.bbc.com/news/technology-54574320 
 
 ## Summary 
