--- a/_posts/2020-11-03-mon-article-4/mon-article-4.Rmd
+++ b/_posts/2020-11-03-mon-article-4/mon-article-4.Rmd
@@ -5,7 +5,7 @@ description: |
 author:
   - name: Plasman Héloïse
     url: {}
-date: 11-03-2020
+date: 11-29-2020
 output:
   distill::distill_article:
     self_contained: false
@@ -15,8 +15,8 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 _Source of the article_ : BBC News
-_Word count_ : 
-_URL_ : https://www.bbc.com/news/technology-54980348  
+_Word count_ : 544
+_URL_ : https://www.bbc.com/news/science-environment-55099620  
 
 ## Summary 
 
