--- a/_posts/2020-11-03-mon-article-5/mon-article-5.Rmd
+++ b/_posts/2020-11-03-mon-article-5/mon-article-5.Rmd
@@ -4,7 +4,7 @@ description: |
   A short description of the post.
 author:
   - name: Plasman Héloïse
-    url: {}
+    url: {http://Heloise04.github.io/Heloise_blog/}
 date: 11-03-2020
 output:
   distill::distill_article:
@@ -14,8 +14,45 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+_Source of the article_ : BBC News
+_Word count_ : 544
+_URL_ : https://www.bbc.com/news/science-environment-55099620  
 
-Distill is a publication format for scientific and technical writing, native to the web.
+## Summary 
 
-Learn more about using Distill at <https://rstudio.github.io/distill>.
+
+## Vocabulary: 
+
+| Words from the text 	| Synonym / explanation in English 	|
+|:-------------------:	|:--------------------------------:	|
+|||
+|||
+
+
+## Analysis table about the study
+
+
+#### *Researchers ?*
+
+
+
+#### *Published in ? when (if mentioned) ?*
+
+
+
+#### *General topic*
+
+
+
+#### *Procedure/ what was examined* 
+
+
+
+#### *Conclusion / discovery* 
+
+
+
+#### *Remaining questions*
+
+
 
