--- a/_posts/2020-11-10-graphicdescription/graphicdescription.Rmd
+++ b/_posts/2020-11-10-graphicdescription/graphicdescription.Rmd
@@ -7,6 +7,8 @@ author:
   - name: Plasman Héloïse
     url: {http://Heloise04.github.io/Heloise_blog/}
 date: 11-10-2020
+categories:
+  - "SSD"
 output:
   distill::distill_article:
     self_contained: false
