--- a/_posts/2020-11-27-introduction/introduction.Rmd
+++ b/_posts/2020-11-27-introduction/introduction.Rmd
@@ -7,6 +7,8 @@ author:
   - name: Plasman Héloïse
     url: {http://Heloise04.github.io/Heloise_blog/}
 date: 11-27-2020
+categories:
+  - "English for Science"
 output:
   distill::distill_article:
     self_contained: false
