--- a/_posts/2020-11-03-mon-article-3/mon-article-3.Rmd
+++ b/_posts/2020-11-03-mon-article-3/mon-article-3.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Article 3 : Tech Tent: Who needs 5G ?"
+title: "Article 3 : Tech Tent : Who needs 5G ?"
 description: |
-  A short description of the post.
+  talking about 5G
 author:
   - name: Plasman Héloïse
     url: {http://Heloise04.github.io/Heloise_blog/}
